Creado mediante Colaboratory

--- a/Copia_de_Untitled0.ipynb
+++ b/Copia_de_Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMytMdkP1Kv2Jidm+V16b3",
+      "authorship_tag": "ABX9TyOSC4YRjGS2u4hlg15qcDxD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,38 @@
         "print(\"hola mundo\")\n",
         "\n",
         "#claro que si"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "segundo"
+      ],
+      "metadata": {
+        "id": "Kd1oPocSl8M3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"MONESY\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7lTb4iUql-O2",
+        "outputId": "d0528d07-b14a-44c5-da23-066fbaeafd73"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MONESY\n"
+          ]
+        }
       ]
     }
   ]
